--- a/top.html
+++ b/top.html
@@ -10,13 +10,27 @@
     <link rel="stylesheet" href="./css/toppagestyle.css">
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
+  
+    <style>
+      .header-image {
+        width: 110px;
+        height: auto;
+      }
+    </style>
+
   </head>
 
   <body>
     <header class="container">
       <div class="headbox">
-        <img src="./img/logo_sp.png" alt="YSEロゴ" class="header-image">
+        <img src="./img/logo_sp2.png" alt="YSEロゴ" class="header-image">
       </div>
+
+      <div class="regist">
+        <a class="regist" href="registration.html" >新規登録をする</a>
+        <a class="regist" href="login.html" >ログインをする</a>
+      </div>
+
     </header>
 
     <main>
@@ -25,14 +39,13 @@
         <div class="text">
           <p class="title">簡単会議！<br>オールインワン会議サービス</p>
           <a class="btn" href="mtgform2.html">会議を作成する</a>
-          <a class="btn" href="form.html" >会議に参加する</a>
-          <a class="btn" href="registration.html" >新規登録をする</a>
-          <a class="btn" href="login.html" >ログインをする</a>
+          <a class="btn" href="form.html" >質問フォーム</a>
+          <a class="btn" href="search.html" >会議を検索</a>
         </div>
         <ul class="fade">
-          <li><img src="img/mainvisual1.jpg" alt=""></li>
-          <li><img src="img/mainvisual2.jpg" alt=""></li>
-          <li><img src="img/mainvisual3.jpg" alt=""></li>
+          <li><img src="img/font/mon6.png" alt=""></li>
+          <!-- <li><img src="img/mainvisual2.jpg" alt=""></li>
+          <li><img src="img/mainvisual3.jpg" alt=""></li> -->
         </ul>
       </div>
     </main>
