--- a/search.html
+++ b/search.html
@@ -5,6 +5,9 @@
     <title>会議検索</title>
     <link rel="stylesheet" type="text/css" href="css/search.css">
 </head>
+
+<!-- /* 変更した */ -->
+
 <body>
 
     <div class="content">
