--- a/mtgform2.html
+++ b/mtgform2.html
@@ -13,6 +13,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jqueryui/1/i18n/jquery.ui.datepicker-ja.min.js"></script>
   </head>
 
+  <!-- /* 変更した */ -->
+
   <body>
     <header>
       <a href="./top.html">Top</a>
