--- a/registration.html
+++ b/registration.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="ja">
+    <!-- /* 変更した */ -->
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
