--- a/top.html
+++ b/top.html
@@ -11,6 +11,8 @@
     <script src="https://ajax.googleapis.com/ajax/libs/jquery/3.5.1/jquery.min.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/jqueryui/1.12.1/jquery-ui.min.js"></script>
   
+    <!-- /* 変更した */ -->
+
     <style>
       .header-image {
         width: 110px;
